# secure-pass-manager

./: PKG-INFO  README.md  SOURCES.txt  __init__.py  core.py  crypt.py  entry_points.txt  pyproject.toml  readme.md  secure_password_manager-0.1.0-py3-none-any.whl
.github/workflow/: python-publish
