[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "secure-password-manager"
version = "0.1.0"
description = "A secure password manager with SQLite storage"
readme = "README.md"
authors = [{name = "Nirjhar", email = "chatnirjhar12345@gmail.com"}]
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Security",
]
keywords = ["password", "security", "encryption", "manager"]
dependencies = [
    "cryptography>=36.0.0",
]
requires-python = ">=3.7"

[project.scripts]
password-manager = "secure_password_manager.cli:main"

[project.urls]
Homepage = "https://github.com/nirjhr/secure-password-manager"
Repository = "https://github.com/nirjhr/secure-password-manager.git"